<resources>
    <string name="app_name">Checkers</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="learn">Learn</string>
    <string name="backward_capture">Backward capture</string>
    <string name="flying_king">Flying king</string>
    <string name="optimal_capture">Optimal capture</string>
    <string name="menu_header">Menu</string>
    <string name="select_game">Select game</string>
    <string name="local">Local</string>
    <string name="network">Network</string>
    <string name="ai">AI</string>
    <string name="enter_name">Enter username</string>
    <string name="send_name">Connect</string>
    <string name="undo_move">Undo</string>
    <string name="name_header">"Player: "</string>
    <string name="turn">turn:</string>
    <string name="search">search</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="error">Error</string>
    <string name="invited">Invited</string>
    <string name="hostname">Hostname</string>
    <string name="ip_address">IP address</string>
    <string name="port">Port</string>
    <string name="network_header">Network</string>
    <string name="game_header">Game</string>
</resources>
