<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="55sp"
        android:text="@string/menu_header"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="#1c7e16"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="55dp"
            android:text="@string/play"
            android:onClick="startGame"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/options"
            android:onClick="showOptions"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/learn" />

    </LinearLayout>
</LinearLayout>











