<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="center_horizontal">

       <EditText
           android:id="@+id/username"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="100dp"
           android:layout_gravity="center"
           android:padding="10dp"
           android:hint="@string/enter_name"
           android:width="300dp"
           android:height="50dp"
           android:background="@android:color/darker_gray"
           android:inputType="text" />

       <EditText
           android:id="@+id/password"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:inputType="textPassword"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
           android:background="@android:color/darker_gray"
           android:width="300dp"
           android:height="50dp"
           android:padding="10dp"
           android:hint="@string/enter_password"
           />

   </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/send_name"
        android:onClick="connect"/>

</LinearLayout>